sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: ')' expected but 'for' found.
	for (i<- 0 to lg-2){
        ^AlgCocktailSort1:12: error: 'while' expected but 'for' found.
for (i<- lg-2 to 0 by -1){
^AlgCocktailSort1:20: error: '(' expected but '}' found.
}
^